--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: linear-gradient(rgba(46, 47, 66, 0.7),
-  rgba(46, 47, 66, 0.7)), url(./data/images/bg-3.jpg);
+  rgba(46, 47, 66, 0.7)), url(./data/images/bgi.jpg);
 }
 
 code {
