--- a/src/components/ContactsForm/ContactsForm.module.css
+++ b/src/components/ContactsForm/ContactsForm.module.css
@@ -8,6 +8,7 @@
     margin-bottom: 25px;
     background-color: burlywood;
     border: 2px solid black;
+    border-radius: 15px;
 }
 
 @media screen and (min-width: 768px) {
