--- a/src/components/ContactsList/Contact.module.css
+++ b/src/components/ContactsList/Contact.module.css
@@ -46,7 +46,7 @@
     border: 3px solid;
     padding: 0.25em 0.5em;
     box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
-    /* position: relative; */
+    position: relative;
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
@@ -56,6 +56,10 @@
     box-shadow: 0px 0px 0px 0px;
     top: 5px;
     left: 5px;
+}
+
+.button:hover {
+    background-color: burlywood;
 }
 
 @media (min-width: 768px) {
